enable event propagation in order to close the context menu (#2714)
* enable event propegation in order to close the context menu

* fix cr

--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
@@ -12,9 +12,12 @@
 <div class="img-container"
 	 [attr.tooltip-value]="geoRegisteredProperties.tooltip | translate"
 	 tooltip-class="bottom left">
-	<img [src]="geoRegisteredProperties.compass"
-		 (click)="toggleNorth()"
-		 (mousedown)="stopPropagation($event)"
-		 [style.transform]="'rotate(' + this[geoRegisteredProperties.rotatePointer] + 'rad)'"
-		 [style.cursor]="isRotating ? '' : 'pointer'"/>
+	<img
+		tabindex="0"
+		#northDiv
+		[src]="geoRegisteredProperties.compass"
+		(click)="toggleNorth()"
+		(mousedown)="stopPropagation($event)"
+		[style.transform]="'rotate(' + this[geoRegisteredProperties.rotatePointer] + 'rad)'"
+		[style.cursor]="isRotating ? '' : 'pointer'"/>
 </div>
