--- a/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
+++ b/src/app/@ansyn/map-facade/components/imagery-rotation/imagery-rotation.component.html
@@ -14,7 +14,7 @@
 	 tooltip-class="bottom left">
 	<img
 		tabindex="0"
-		#northDiv
+		#northImg
 		[src]="geoRegisteredProperties.compass"
 		(click)="toggleNorth()"
 		(mousedown)="stopPropagation($event)"
