anaglyph integration fix

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1240,6 +1240,7 @@
 	}
   },
   "anaglyphConfig": {
+  	"getStereoUrl": "needed test",
   	"sensorNames": {{ getv "/ansyn/anaglyph/sensornames" "null" }}
   }
 }
