Ansyn icon will reset the app to default case

--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -30,7 +30,8 @@
 					 [style.border]="'1px sollid' + menuConfig.color"
 				>{{menuConfig.mode}}
 				</div>
-				<img [src]="menuConfig.path" [alt]="version" [title]="version">
+				<img [src]="menuConfig.path" [alt]="version" [title]="version" (click)="resetApp()">
+
 			</div>
 
 		</div>
