--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -50,21 +50,11 @@
 	<div class="container" #container [@expand]="expand" (@expand.done)="onExpandDone()"
 		 (@expand.start)="onExpandStart()">
 		<!--<button class="close" (click)="closeMenu()">×</button>-->
-
 		<button class="pin"
-				*ngIf="!isPinned"
 				(click)="toggleIsPinned()"
 				[attr.tooltip-value]="pinText | translate" tooltip-class="right">
-			<i class="icon-pin"></i>
+			<i [ngClass]="isPinned? 'icon-unpin' : 'icon-pin'"></i>
 		</button>
-
-		<button class="pin"
-				*ngIf="isPinned"
-				(click)="toggleIsPinned()"
-				[attr.tooltip-value]="pinText | translate" tooltip-class="right">
-			<i class="icon-unpin"></i>
-		</button>
-
 		<ng-template #componentElem></ng-template>
 	</div>
 
