set planet as inactive provider

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -535,7 +535,7 @@
 		  "blacklist": []
 		},
 		"PLANET": {
-		  "inActive": {{ getv "/ansyn/overlay/planet/inactive" "false" }},
+		  "inActive": {{ getv "/ansyn/overlay/planet/inactive" "true" }},
 		  "whitelist": [
 			  {
 				"name": "Entire Earth",
