enable to show hide default layer

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -1,5 +1,7 @@
 <h1>Sandbox</h1>
 
+<button (click)="showDefaultLayer()">Show/Hide Default Layer</button>
+
 <button (click)="setPositionByRadius()">Set Position by radius</button>
 
 <button (click)="setPositionByRect()">Set Position by rect</button>
