add dash line to annotations

--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -47,7 +47,7 @@
 		<ansyn-annotations-weight
 			[show]="selectedBox === SelectionBoxTypes.LineWidth"
 			[properties]="annotationProperties"
-			(selectLineWidth)="selectLineWidth($event)"
+			(selectLineStyle)="selectLineStyle($event)"
 		></ansyn-annotations-weight>
 	</li>
 
