--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.html
@@ -59,7 +59,7 @@
 						<ansyn-annotations-weight
 							[show]="selectedTab[featureId] === Tabs.Weight"
 							[properties]="getFeatureProps(featureId)?.style?.initial"
-							(selectLineWidth)="selectLineWidth($event.width, featureId)">
+							(selectLineStyle)="selectLineWidth($event, featureId)">
 						</ansyn-annotations-weight>
 					</p>
 				</li>
