--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.html
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotations-weight/annotations-weight.component.html
@@ -1,11 +1,13 @@
 <div class="list line-width-expand" *ngIf="show">
 	<div
 		class="item"
-		*ngFor="let width of lineWidthList"
-		[class.selected]="width === properties['stroke-width']"
-		(click)="selectLineWidth.emit({event: $event, width: width})">
+		*ngFor="let style of styleList"
+		[class.selected]="isSelect(style)"
+		(click)="selectLineStyle.emit(style)">
 		<svg height="20" width="20">
-			<line [style.stroke-width]="width" style="stroke:white" x1="0" x2="20" y1="10" y2="10"></line>
+			<line [style.stroke-width]="getWidth(style)"
+				  [style.stroke-dasharray]="getDashLine(style)"
+				  style="stroke:white" x1="0" x2="20" y1="10" y2="10"></line>
 		</svg>
 	</div>
 </div>
