--- a/src/app/app/sandbox/components/sandbox.component.less
+++ b/src/app/app/sandbox/components/sandbox.component.less
@@ -2,19 +2,32 @@
 
 :host {
 	&:extend(.default-menu-item);
-	overflow: visible;
-	padding: 40px 10px;
+	width: 100%;
+	padding: 45px 10px;
 	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
 
-	h1 {
-		color: brown;
-		text-shadow: black;
-		font-style: italic;
-	}
+	.all-options {
+		&:extend(.default-menu-item);
 
-	& > * {
-		margin-top: 10px;
+		overflow-y: auto;
+		height: calc(~'100% - 5px');
+		padding-right: 10px;
+
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		h1 {
+			color: brown;
+			text-shadow: black;
+			font-style: italic;
+		}
+
+		label {
+			color: white;
+		}
+
+		& > * {
+			margin-top: 10px;
+		}
 	}
 }
