--- a/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
+++ b/src/app/@ansyn/map-facade/components/imagery-status/imagery-status.component.less
@@ -93,6 +93,10 @@
 			}
 		}
 	}
+
+	/deep/ ansyn-alerts-container {
+		max-width: 33%;
+	}
 }
 
 // Prevent collision of description and buttons in small resolution
