Status bar - alerts (cont) - also anaglyph

--- a/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/openlayers/plugins/anaglyph-sensor/alert-component/anaglyph-sensor-alert.component.html
@@ -4,5 +4,5 @@
 	[disabled]="isDisabled"
 	(click)="ShowAnaglyph()">
 	<span class="indicator"></span>
-	{{'Show Anaglyph' | translate}}
+	<span class="text">{{'Show Anaglyph' | translate}}</span>
 </button>
