--- a/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/overlay-status/overlay-status.component.less
@@ -15,12 +15,11 @@
 		line-height: 0;
 
 		&.small-icon-button {
-			margin-left: 3px;
 			font-size: @icon-size;
 			background: transparent;
 			border: none;
 			outline: none;
-			padding: 2px 4px;
+			padding: 0;
 			display: flex;
 			align-items: center;
 			z-index: 1;
