--- a/src/app/@ansyn/imagery/map/map.component.html
+++ b/src/app/@ansyn/imagery/map/map.component.html
@@ -1,3 +1,4 @@
 <div #mapElementShadowNorth style="visibility: hidden"></div>
 <div #mapElementShadowDoubleBuffer style="visibility: hidden"></div>
 <div #mapElement></div>
+<ng-container #mapViewContainerRef></ng-container>
