--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.less
@@ -17,9 +17,9 @@
 	transition: opacity @animation-duration, visibility calc(~"@{animation-duration} + 0.1s");
 
 	.overlay-overview {
-		background-color: white;
+		background-color: @background-color-1;
 		box-shadow: 0 0 15px 0 #2e2d46;
-		border: 2px white solid;
+		border: 2px @background-color-1 solid;
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-start;
@@ -72,8 +72,10 @@ img {
 	}
 }
 
-footer {
+header {
 	width: 100%;
+	padding-bottom: 2px;
+	color: white;
 	display: flex;
 	justify-content: space-between;
 }
