Make the popup wide as needed to display the type + name

--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,6 +1,6 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
 	<header>
-		<div dir="rtl">{{ sensorType | translate }} ({{sensorName | translate}})</div>
+		<div class="name">{{ sensorType | translate }} ({{sensorName | translate}})</div>
 		<div>{{formattedTime}}</div>
 	</header>
 	<main>
