inactive imagery video

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -1261,7 +1261,7 @@
 			  }
 		},
 			"IMAGERY_VIDEO": {
-        		"inActive": false,
+        		"inActive": {{ getv "/ansyn/overlay/imageryvideo/inactive" "true" }},
         		"whitelist": [
         			{
         				"name": "Entire Earth",
