get radius from api

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -7,7 +7,10 @@
 
 	<button (click)="setPositionByRect()">Set Position by rect</button>
 
-	<button (click)="setOverlayCriteria()">Set overlays criteria</button>
+	<button (click)="setOverlayCriteriaPoint()">Set overlays criteria point with radius 0 m</button>
+	<button (click)="setOverlayCriteriaPoint(500)">Set overlays criteria point with radius 500 m</button>
+	<button (click)="setOverlayCriteriaPolygon()">Set overlays criteria polygon with radius 0 m</button>
+	<button (click)="setOverlayCriteriaPolygon(500)">Set overlays criteria polygon with radius 500 m</button>
 
 	<button (click)="setOverlays()">Set overlays in timeline</button>
 
