Adaptations to RTL

--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.html
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.html
@@ -1,5 +1,5 @@
 <div class="overlay-overview" (dblclick)="onDblClick()">
-	<header>
+	<header [ngClass]="'rtl' === ('direction' | translate) ? 'rtl' : ''">
 		<div class="name">{{ sensorType | translate }} ({{sensorName | translate}})</div>
 		<div>{{formattedTime}}</div>
 	</header>
