--- a/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.less
+++ b/src/app/@ansyn/ansyn/modules/overlays/components/overlay-overview/overlay-overview.component.less
@@ -82,5 +82,14 @@ header {
 	.name {
 		flex: 1;
 		margin-right: 5px;
+		margin-left: 0;
+	}
+
+	&.rtl {
+		direction: rtl;
+		.name {
+			margin-right: 0;
+			margin-left: 5px;
+		}
 	}
 }
