--- a/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
+++ b/src/app/@ansyn/ansyn/modules/core/components/credentials/credentials.component.html
@@ -1,4 +1,4 @@
-<div class="credentials">
+<div class="credentials" *ngIf="show">
 
 	<div class="buttons">
 		<button [attr.tooltip-value]="'Credentials' | translate"
