--- a/src/app/@ansyn/map-facade/components/floating-menu/floating-menu.component.less
+++ b/src/app/@ansyn/map-facade/components/floating-menu/floating-menu.component.less
@@ -12,6 +12,10 @@
 	user-select: none;
 	width: @size;
 
+	&.isMinimalistViewModeClass {
+		top: 60px;
+	}
+
 	div {
 		display: flex;
 		flex-direction: column;
