--- a/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
+++ b/src/app/@ansyn/ansyn/modules/plugins/components/imagery-zoomer/imagery-zoomer.component.html
@@ -1,24 +1,26 @@
-<div class="buttons">
-	<button class="small-icon-button"
-			[attr.tooltip-value]="'Zoom in' | translate"
-			tooltip-class="'left'"
-			(click)="zoomIn()">
-		+
-	</button>
-</div>
+<div *ngIf="show">
+	<div class="buttons">
+		<button class="small-icon-button"
+				[attr.tooltip-value]="'Zoom in' | translate"
+				tooltip-class="'left'"
+				(click)="zoomIn()">
+			+
+		</button>
+	</div>
 
-<div class="buttons">
-	<button class="small-icon-button"
-			[attr.tooltip-value]="'Zoom out' | translate"
-			tooltip-class="'left'"
-			(click)="zoomOut()">
-		-
-	</button>
-</div>
+	<div class="buttons">
+		<button class="small-icon-button"
+				[attr.tooltip-value]="'Zoom out' | translate"
+				tooltip-class="'left'"
+				(click)="zoomOut()">
+			-
+		</button>
+	</div>
 
-<div class="buttons">
-	<button class="small-icon-button"
-			(click)="one2one()">
-		1:1
-	</button>
+	<div class="buttons">
+		<button class="small-icon-button"
+				(click)="one2one()">
+			1:1
+		</button>
+	</div>
 </div>
