fix rename isCollapsible

--- a/src/app/@ansyn/menu/menu/menu.component.html
+++ b/src/app/@ansyn/menu/menu/menu.component.html
@@ -37,7 +37,7 @@
 		</div>
 
 		<button
-			*ngIf="menuConfig?.iscollapsible"
+			*ngIf="menuConfig?.isCollapsible"
 			class="hide-menu"
 			(click)="toggleCollapse()"
 			[attr.tooltip-value]="minimizeText | translate"
