--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -377,7 +377,7 @@
     	"title": "Fork me on github",
 		"href": "{{ getv "/ansyn/menu/forkme/url" "https://github.com/ansyn/ansyn" }}"
     },
-    "iscollapsible": {{ getv "/ansyn/iscollapsible" "true" }}
+    "isCollapsible": {{ getv "/ansyn/iscollapsible" "true" }}
   },
   "loginConfig": {
   	"baseUrl": "{{ getv "/ansyn/login/baseurl" "http://platform.ansyn.io:9001/api/v1/login" }}",
