use config to decide if to print total measure

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -391,6 +391,11 @@
   	"noCredentialsMessage": "invalid credentials"
   },
   "visualizersConfig": {
+  	"MeasureDistanceVisualizer": {
+  		"extra": {
+  			"isTotalMeasureActive": true
+  		}
+    },
     "FrameVisualizer": {
       "colors": {
         "active": "#27b2cf",
