Moving overlay hover display from polyline-visualizer to overlay-hover-visualizer

--- a/confd/templates/production.tmpl
+++ b/confd/templates/production.tmpl
@@ -406,6 +406,14 @@
         "favorite": "yellow"
       }
     },
+    "OverlayHoverVisualizer": {
+      "colors": {
+        "active": "#fb634e",
+        "inactive": "#0091ff",
+        "display": "#8cceff",
+        "favorite": "yellow"
+      }
+    },
     "FootprintHeatmapVisualizer": {
       "minSimplifyVertexCountLimit": 100
     },
