1. Add flag isNonEditable to ILayer 2. Enable inserting isNonEditable layer from api 3. Implement the new option in the sandbox

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -45,6 +45,7 @@
 	<button (click)="collapseAll()">Collapse All</button>
 	<button (click)="unCollapseAll()">Un-Collapse All</button>
 	<button (click)="insertLayer()">Insert Layer</button>
+	<button (click)="insertLayer(true)">Insert non-editable Layer</button>
 	<button (click)="removeLayer()">Remove Layer</button>
 	<button (click)="showLayer()">Show/Hide Layer</button>
 	<button (click)="startDrag()">Start Drag</button>
