--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/annotations-control/annotations-control.component.html
@@ -12,7 +12,7 @@
 			[comboBoxToolTipDescription]="'choose annotation layer' | translate"
 			(ngModelChange)="setSelectedAnnotationLayer($event)">
 
-			<ansyn-combo-box-option *ngFor="let layer of annotationLayer$ | async" [value]="layer.id">
+			<ansyn-combo-box-option *ngFor="let layer of annotationLayer$ | async" [value]="layer.id" [disabled]="layer.isNonEditable">
 				{{ layer.name }}
 			</ansyn-combo-box-option>
 
