--- a/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
+++ b/src/app/@ansyn/ansyn/modules/menu-items/tools/components/measure-control/measure-control.component.less
@@ -2,7 +2,7 @@
 
 :host {
 	position: absolute;
-	width: 150px;
+	width: 190px;
 	top: 10px;
 	right: 120px;
 	z-index: 2;
@@ -16,34 +16,34 @@
 		padding: 5px 15px;
 	}
 
-
 	.buttons {
 		display: flex;
-		justify-content: flex-end;
-
-		button {
-			border: none;
-			background-color: inherit;
-
-			&#clearBtn {
-				color: #9e9e9e;
-			}
-
-			&#doneBtn {
-				color: @application-primary-color;
-
-				&:hover {
-					background-color: @background-color-6;
-				}
-			}
-
-			.bold-on-hover:hover {
-				font-weight: bold;
-			}
-		}
+		align-items: flex-start;
+		flex-direction: column;
 	}
 
+	button {
+		border: none;
+		background-color: inherit;
+		color: #9e9e9e;
 
+		&#doneBtn {
+			color: @application-primary-color;
+			align-self: flex-end;
+
+			&:hover {
+				background-color: @background-color-6;
+			}
+		}
+
+		.bold-on-hover:hover {
+			font-weight: bold;
+		}
+
+		&.active {
+			color: @application-primary-color;
+		}
+	}
 }
 
 .imageries-container {
