1. Save the isNonEditable as a property, for each feature in the feature collection of the layer 2. Prepare to display disabled buttons in the ann. context menu

--- a/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
+++ b/src/app/@ansyn/ol/plugins/annotations/annotations-context-menu/components/annotation-context-menu/annotation-context-menu.component.less
@@ -75,6 +75,11 @@ i {
 					&.active, &:hover {
 						background-color: @application-primary-color;
 					}
+
+					&.disabled {
+						opacity: 0.6;
+						pointer-events: none;
+					}
 				}
 
 				li.expanded-selection {
