fix filters bug

--- a/src/app/app/sandbox/components/sandbox.component.html
+++ b/src/app/app/sandbox/components/sandbox.component.html
@@ -1,6 +1,7 @@
 <div class="all-options scrolled">
 	<h1>Sandbox</h1>
 
+	<button (click)="updateOverlayAsPartiallyRegistered()">Update active overlay As partially registered</button>
 	<button (click)="showDefaultLayer()">Show/Hide Default Layer</button>
 
 	<button (click)="setPositionByRadius()">Set Position by radius</button>
