Add position: relative, to get correct tooltip position

--- a/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
+++ b/src/app/@ansyn/ansyn/modules/alerts/components/alerts-container/alerts-container.component.less
@@ -15,7 +15,7 @@
 		padding: 0 5px;
 		display: flex;
 		align-items: center;
-		overflow: hidden;
+		position: relative;
 		justify-content: flex-start;
 
 		span.text {
