Forbid deletion of layer, if all the remaining layers are non editable

--- a/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
+++ b/src/app/@ansyn/ansyn/modules/menu-items/layers-manager/components/layers-collection/layer-collection.component.html
@@ -26,12 +26,12 @@
 
 	</div>
 
-	<ansyn-layer *ngFor="let layer of collection.data"
+	<ansyn-layer *ngFor="let layer of collection.data; let index = index"
 				 [@layersTrigger]="show"
 				 [layer]="layer"
 				 [showOnly]="collection.data.length < 2">
 
-		<ansyn-layer-menu [disabledRemove]="collection.data?.length < 2"
+		<ansyn-layer-menu [disabledRemove]="shouldDisableRemoveLayer(index)"
 						  (openModal)="openModal($event, layer)">
 		</ansyn-layer-menu>
 
