--- a/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
+++ b/src/app/@ansyn/ansyn/modules/core/components/angle-filter/angle-filter.component.less
@@ -5,8 +5,8 @@
 @point-size: 25px;
 @arrow-height: 73.5px;
 @arrow-width: 5px;
-@background-color: rgba(205, 205, 205, 0.7);
-@border-color: rgb(165, 165, 165);
+@background-color: rgba(0, 0, 0, 0.5);
+@border-color: #494949;
 
 :host {
 	position: fixed;
@@ -126,7 +126,7 @@
 				padding: 0;
 
 				i {
-					color: @application-primary-color;
+					color: white;
 				}
 
 				&:hover:not(:disabled) {
